statum-macros/tests/ui/invalid_validators_declared_before_machine.stderr
error: Error: `#[validators(WorkflowMachine)]` could not resolve a matching `#[machine]` in module `invalid_validators_declared_before_machine`.
       Fix: point `#[validators(...)]` at the Statum machine type declared in that module and declare that `#[machine]` item before this validators impl.
       Statum only resolves `#[machine]` items that have already expanded before this `#[validators]` impl.
       Source scan found `#[machine]` item `WorkflowMachine` later in this module on line 34. If that item is active for this build, move it above this `#[validators]` impl because Statum resolves these relationships in expansion order.
       No plain struct with that name was found in this module either.
       No same-named `#[machine]` items were found in other modules of this file.
       Available `#[machine]` items in this module: `WorkflowMachine` in `invalid_validators_declared_before_machine` (line 34).
       Correct shape: `#[validators(WorkflowMachine)] impl PersistedRow { ... }`.
  --> tests/ui/invalid_validators_declared_before_machine.rs:22:1
   |
22 | #[validators(WorkflowMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
